--- a/Template.MobileServer.Frontend/Template.MobileServer.Frontend.csproj
+++ b/Template.MobileServer.Frontend/Template.MobileServer.Frontend.csproj
@@ -12,7 +12,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Template.MobileServer.Shared\Template.MobileServer.Shared.csproj" />
+    <ProjectReference Include="..\Template.MobileServer.Domain\Template.MobileServer.Domain.csproj" />
+    <ProjectReference Include="..\Template.MobileServer.Shared\Template.MobileServer.Api.csproj" />
   </ItemGroup>
 
 </Project>
