--- a/Template.MobileServer.Backend.Web/appsettings.json
+++ b/Template.MobileServer.Backend.Web/appsettings.json
@@ -1,9 +1,37 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "AllowedHosts": "*",
+
+  "Authentication": {
+    "SecretKey": "82A482B382A482B382BE82E682E082F1",
+    "Issuer": "template",
+    "Expire": 1440
   },
-  "AllowedHosts": "*"
+
+  "Storage": {
+    "Root": "..\\Storage"
+  },
+
+  "Serilog": {
+    "Using": [
+      "Serilog.Sinks.File"
+    ],
+    "Enrich": [ "FromLogContext", "WithThreadId" ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.AspNetCore.DataProtection": "Error"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": "..\\Log\\Template.MobileServer.Backend.Web.log",
+          "rollingInterval": "Day",
+          "outputTemplate": "{Timestamp:HH:mm:ss.fff} {Level:u4} [{RequestId}] [{ThreadId}] {RequestPath} - {Message:lj}{NewLine}{Exception}"
+        }
+      }
+    ]
+  }
 }
