--- a/Template.MobileServer.Domain/Template.MobileServer.Domain.csproj
+++ b/Template.MobileServer.Domain/Template.MobileServer.Domain.csproj
@@ -2,8 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
-    <RootNamespace>Template.MobileServer.Backend</RootNamespace>
+    <RootNamespace>Template.MobileServer</RootNamespace>
     <CodeAnalysisRuleSet>..\Analyzers.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Usa.Smart.Core" Version="2.2.0" />
+  </ItemGroup>
 
 </Project>
