--- a/Template.MobileServer.Backend.Web/Properties/launchSettings.json
+++ b/Template.MobileServer.Backend.Web/Properties/launchSettings.json
@@ -22,6 +22,7 @@
         "commandName": "Project",
         "dotnetRunMessages": true,
         "launchBrowser": true,
+        "launchUrl": "swagger",
         "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
         "applicationUrl": "https://localhost:7060;http://localhost:5238",
         "environmentVariables": {
