--- a/Template.MobileServer.Backend.Web/appsettings.Development.json
+++ b/Template.MobileServer.Backend.Web/appsettings.Development.json
@@ -22,7 +22,7 @@
       {
         "Name": "File",
         "Args": {
-          "path": "..\\Log\\Template.MobileServer.Backend.Web.log",
+          "path": "../log/Template.MobileServer.Backend.Web.log",
           "rollingInterval": "Day",
           "outputTemplate": "{Timestamp:HH:mm:ss.fff} {Level:u4} [{RequestId}] [{ThreadId}] {RequestPath} - {Message:lj}{NewLine}{Exception}"
         }
