--- a/Template.MobileServer.Backend.Web/appsettings.json
+++ b/Template.MobileServer.Backend.Web/appsettings.json
@@ -1,6 +1,10 @@
 {
   "AllowedHosts": "*",
 
+  "FeatureManagement": {
+    "CustomOption": true
+  },
+
   "Authentication": {
     "SecretKey": "82A482B382A482B382BE82E682E082F1",
     "Issuer": "template",
