--- a/Template.MobileServer.Backend.Web/appsettings.Development.json
+++ b/Template.MobileServer.Backend.Web/appsettings.Development.json
@@ -9,7 +9,8 @@
     "MinimumLevel": {
       "Default": "Debug",
       "Override": {
-        "Microsoft": "Warning"
+        "Microsoft": "Warning",
+        "Microsoft.AspNetCore.HttpLogging.HttpLoggingMiddleware": "Information"
       }
     },
     "WriteTo": [
