--- a/Template.MobileServer.Backend.Web/appsettings.Development.json
+++ b/Template.MobileServer.Backend.Web/appsettings.Development.json
@@ -3,9 +3,11 @@
 
   "Serilog": {
     "Using": [
-      "Serilog.Sinks.File"
+      "Serilog.Enrichers.Environment",
+      "Serilog.Sinks.File",
+      "Serilog.Sinks.Syslog"
     ],
-    "Enrich": [ "FromLogContext", "WithThreadId" ],
+    "Enrich": [ "FromLogContext", "WithThreadId", "WithMachineName" ],
     "MinimumLevel": {
       "Default": "Debug",
       "Override": {
@@ -17,7 +19,7 @@
       {
         "Name": "Debug",
         "Args": {
-          "outputTemplate": "{Timestamp:HH:mm:ss.fff} {Level:u4} [{RequestId}] [{ThreadId}] {RequestPath} - {Message:lj}{NewLine}{Exception}"
+          "outputTemplate": "{Timestamp:HH:mm:ss.fff} {Level:u4} {MachineName} [{ThreadId}] {RequestId} {RequestPath} - {Message:lj}{NewLine}{Exception}",
         }
       },
       {
@@ -25,7 +27,7 @@
         "Args": {
           "path": "../log/Template.MobileServer.Backend.Web.log",
           "rollingInterval": "Day",
-          "outputTemplate": "{Timestamp:HH:mm:ss.fff} {Level:u4} [{RequestId}] [{ThreadId}] {RequestPath} - {Message:lj}{NewLine}{Exception}"
+          "outputTemplate": "{Timestamp:HH:mm:ss.fff} {Level:u4} {MachineName} [{ThreadId}] {RequestId} {RequestPath} - {Message:lj}{NewLine}{Exception}",
         }
       }
     ]
