--- a/Template.MobileServer.Backend.Web/appsettings.json
+++ b/Template.MobileServer.Backend.Web/appsettings.json
@@ -17,9 +17,11 @@
 
   "Serilog": {
     "Using": [
-      "Serilog.Sinks.File"
+      "Serilog.Enrichers.Environment",
+      "Serilog.Sinks.File",
+      "Serilog.Sinks.Syslog"
     ],
-    "Enrich": [ "FromLogContext", "WithThreadId" ],
+    "Enrich": [ "FromLogContext", "WithThreadId", "WithMachineName" ],
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
@@ -33,9 +35,20 @@
         "Args": {
           "path": "../log/Template.MobileServer.Backend.Web.log",
           "rollingInterval": "Day",
-          "outputTemplate": "{Timestamp:HH:mm:ss.fff} {Level:u4} [{RequestId}] [{ThreadId}] {RequestPath} - {Message:lj}{NewLine}{Exception}"
+          "outputTemplate": "{Timestamp:HH:mm:ss.fff} {Level:u4} {MachineName} [{ThreadId}] {RequestId} {RequestPath} - {Message:lj}{NewLine}{Exception}"
         }
       }
+      //{
+      //  "Name": "UdpSyslog",
+      //  "Args": {
+      //    "outputTemplate": "{Level:u4} {MachineName} [{ThreadId}] {RequestId} {RequestPath} - {Message:lj}",
+      //    "host": "127.0.0.1",
+      //    "port": 514,
+      //    "appName": "moneyapi",
+      //    "facility": "Local0",
+      //    "restrictedToMinimumLevel": "Information"
+      //  }
+      //}
     ]
   }
 }
