--- a/Template.MobileServer.Frontend/Template.MobileServer.Frontend.csproj
+++ b/Template.MobileServer.Frontend/Template.MobileServer.Frontend.csproj
@@ -10,6 +10,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.0" PrivateAssets="all" />
     <PackageReference Include="MudBlazor" Version="6.11.1" />
+    <PackageReference Include="StringConvertHelper" Version="1.0.0" />
+    <PackageReference Include="StringValuesBinder" Version="1.0.0" />
     <PackageReference Include="System.Linq.Async" Version="6.0.1" />
     <PackageReference Include="System.Reactive" Version="6.0.0" />
     <PackageReference Include="Usa.Smart.Blazor" Version="0.4.0" />
