--- a/Template.MobileServer.Backend.Core/Template.MobileServer.Backend.Core.csproj
+++ b/Template.MobileServer.Backend.Core/Template.MobileServer.Backend.Core.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
-    <PackageReference Include="Usa.Smart.Core" Version="2.3.0" />
+    <PackageReference Include="Usa.Smart.Core" Version="2.3.1" />
     <PackageReference Include="Usa.Smart.Data" Version="2.4.0" />
     <PackageReference Include="Usa.Smart.Data.Accessor" Version="2.5.0" />
     <PackageReference Include="Usa.Smart.Data.Accessor.Extensions.DependencyInjection" Version="2.5.0" />
