--- a/Template.MobileServer.Domain/Template.MobileServer.Domain.csproj
+++ b/Template.MobileServer.Domain/Template.MobileServer.Domain.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Usa.Smart.Core" Version="2.3.0" />
+    <PackageReference Include="Usa.Smart.Core" Version="2.3.1" />
   </ItemGroup>
 
 </Project>
