--- a/Template.MobileServer.Frontend/Template.MobileServer.Frontend.csproj
+++ b/Template.MobileServer.Frontend/Template.MobileServer.Frontend.csproj
@@ -1,22 +1,22 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
+<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <CodeAnalysisRuleSet>..\Analyzers.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="13.0.1" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.1" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.1" PrivateAssets="all" />
-    <PackageReference Include="MudBlazor" Version="6.15.0" />
-    <PackageReference Include="StringConvertHelper" Version="1.0.0" />
-    <PackageReference Include="StringValuesBinder" Version="1.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="9.0.0" PrivateAssets="all" />
+    <PackageReference Include="MudBlazor" Version="7.15.0" />
+    <PackageReference Include="StringConvertHelper" Version="1.1.0" />
+    <PackageReference Include="StringValuesBinder" Version="1.1.0" />
     <PackageReference Include="System.Linq.Async" Version="6.0.1" />
-    <PackageReference Include="System.Reactive" Version="6.0.0" />
-    <PackageReference Include="Usa.Smart.Blazor" Version="0.4.0" />
-    <PackageReference Include="Usa.Smart.Core" Version="2.3.1" />
-    <PackageReference Include="Usa.Smart.Reactive" Version="2.3.0" />
+    <PackageReference Include="System.Reactive" Version="6.0.1" />
+    <PackageReference Include="Usa.Smart.Blazor" Version="0.5.0" />
+    <PackageReference Include="Usa.Smart.Core" Version="2.4.0" />
+    <PackageReference Include="Usa.Smart.Reactive" Version="2.4.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -29,6 +29,13 @@
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
       <CopyToPublishDirectory>Never</CopyToPublishDirectory>
     </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Update="Usa.Smart.Analyzers.JapaneseComment" Version="1.3.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
