--- a/Template.MobileServer.Backend.Web/appsettings.Development.json
+++ b/Template.MobileServer.Backend.Web/appsettings.Development.json
@@ -19,7 +19,7 @@
       {
         "Name": "Debug",
         "Args": {
-          "outputTemplate": "{Timestamp:HH:mm:ss.fff} {Level:u4} {MachineName} [{ThreadId}] {RequestId} {RequestPath} - {Message:lj}{NewLine}{Exception}",
+          "outputTemplate": "{Timestamp:HH:mm:ss.fff} {Level:u4} {MachineName} [{ThreadId}] {RequestId} {RequestPath} - {Message:lj}{NewLine}{Exception}"
         }
       },
       {
@@ -27,7 +27,7 @@
         "Args": {
           "path": "../log/Template.MobileServer.Backend.Web.log",
           "rollingInterval": "Day",
-          "outputTemplate": "{Timestamp:HH:mm:ss.fff} {Level:u4} {MachineName} [{ThreadId}] {RequestId} {RequestPath} - {Message:lj}{NewLine}{Exception}",
+          "outputTemplate": "{Timestamp:HH:mm:ss.fff} {Level:u4} {MachineName} [{ThreadId}] {RequestId} {RequestPath} - {Message:lj}{NewLine}{Exception}"
         }
       }
     ]
