--- a/Template.MobileServer.Web/appsettings.Development.json
+++ b/Template.MobileServer.Web/appsettings.Development.json
@@ -1,8 +1,54 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+  "Log": {
+    "W3C": {
+      "LogDirectory": "../log",
+      "AdditionalHeaders": [ "x-forwarded-for", "x-trace-id" ]
+    },
+    "Http": {
+      "HttpLogging": true,
+      "DumpBody": true
+    },
+    "Data": {
+      "SqlTrace": true
     }
+  },
+
+  "Serilog": {
+    "Using": [
+      "Serilog.Enrichers.Environment",
+      "Serilog.Sinks.Console",
+      "Serilog.Sinks.File"
+    ],
+    "Enrich": [ "FromLogContext", "WithThreadId", "WithMachineName" ],
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.AspNetCore.Hosting.Diagnostics": "Error",
+        "Microsoft.AspNetCore.HttpLogging.HttpLoggingMiddleware": "Information"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Debug",
+        "Args": {
+          "outputTemplate": "{Timestamp:HH:mm:ss.fff} {Level:u4} {MachineName} [{SourceContext}] [{ThreadId}] {TraceId} {RequestId} {RequestPath} - {Message:lj}{NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "{Timestamp:HH:mm:ss.fff} {Level:u4} {MachineName} [{SourceContext}] [{ThreadId}] {TraceId} {RequestId} {RequestPath} - {Message:lj}{NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "../log/Template.MobileServer_.log",
+          "rollingInterval": "Day",
+          "outputTemplate": "{Timestamp:HH:mm:ss.fff} {Level:u4} {MachineName} [{SourceContext}] [{ThreadId}] {TraceId} {RequestId} {RequestPath} - {Message:lj}{NewLine}{Exception}"
+        }
+      }
+    ]
   }
 }
