--- a/Template.MobileServer.Core/Template.MobileServer.Core.csproj
+++ b/Template.MobileServer.Core/Template.MobileServer.Core.csproj
@@ -2,8 +2,23 @@
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <RootNamespace>Template.MobileServer</RootNamespace>
+    <CodeAnalysisRuleSet>..\Analyzers.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.10" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.10" />
+    <PackageReference Include="System.Linq.Async" Version="6.0.3" />
+    <PackageReference Include="Usa.Smart.Core" Version="2.4.6" />
+    <PackageReference Include="Usa.Smart.Data.Accessor.Core" Version="2.9.3" />
+    <PackageReference Include="Usa.Smart.Data.Accessor.Extensions.DependencyInjection" Version="2.9.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Domain\Core\" />
+    <Folder Include="Domain\Enum\" />
+    <Folder Include="Domain\Logic\" />
+  </ItemGroup>
 
 </Project>
