--- a/Template.MobileServer.Web/appsettings.json
+++ b/Template.MobileServer.Web/appsettings.json
@@ -1,9 +1,52 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+  "http_ports": "8080",
+
+  "AllowedHosts": "*",
+
+  "FeatureManagement": {
+    "CustomOption": true
+  },
+
+  "Storage": {
+    "Root": "../storage"
+  },
+
+  "Log": {
+    "W3C": {
+      "LogDirectory": "../log",
+      "AdditionalHeaders": [ "x-forwarded-for", "x-trace-id" ]
+    },
+    "Http": {
+      "HttpLogging": false,
+      "DumpBody": false
+    },
+    "Data": {
+      "SqlTrace": true
     }
   },
-  "AllowedHosts": "*"
+
+  "Serilog": {
+    "Using": [
+      "Serilog.Enrichers.Environment",
+      "Serilog.Sinks.File"
+    ],
+    "Enrich": [ "FromLogContext", "WithThreadId", "WithMachineName" ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.AspNetCore.HttpLogging.HttpLoggingMiddleware": "Information"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": "../log/Template.MobileServer_.log",
+          "rollingInterval": "Day",
+          "outputTemplate": "{Timestamp:HH:mm:ss.fff} {Level:u4} {MachineName} [{SourceContext}] [{ThreadId}] {TraceId} {RequestId} {RequestPath} - {Message:lj}{NewLine}{Exception}"
+        }
+      }
+    ]
+  }
 }
