--- a/Template.MobileServer.Web/appsettings.json
+++ b/Template.MobileServer.Web/appsettings.json
@@ -7,8 +7,30 @@
     "CustomOption": true
   },
 
+  "ConnectionStrings": {
+  },
+
   "Storage": {
     "Root": "../storage"
+  },
+
+  "Api": {
+    "UseRequestDecompression": true,
+    "UseResponseCompression": true,
+    "RateLimit": {
+      "Window": 1000,
+      "PermitLimit": 1,
+      "QueueLimit": 0
+    }
+  },
+
+  "Server": {
+    "LongTimeThreshold": 10000,
+    "KnownProxies": [],
+    "KnownNetworks": []
+  },
+
+  "TelemetrySetting": {
   },
 
   "Log": {
