--- a/Template.MobileServer.Web/Template.MobileServer.Web.csproj
+++ b/Template.MobileServer.Web/Template.MobileServer.Web.csproj
@@ -7,14 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="新しいフォルダー\**" />
-    <Content Remove="新しいフォルダー\**" />
-    <EmbeddedResource Remove="新しいフォルダー\**" />
-    <None Remove="新しいフォルダー\**" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="AutoMapper" Version="14.0.0" />
+    <PackageReference Include="AutoMapper" Version="[14.0.0,15.0.0)" />
     <PackageReference Include="AutoMapperFragmentConfig" Version="1.2.0" />
     <PackageReference Include="FluentValidation" Version="12.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.10" />
